--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -10,6 +10,7 @@ TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
 GlobalDefaultGameMode=/Game/TopDownBP/Blueprints/TopDownGameMode.TopDownGameMode_C
 GlobalDefaultServerGameMode=None
+GameInstanceClass=/Game/TopDownBP/Blueprints/Test_GameInstance.Test_GameInstance_C
 
 [/Script/NavigationSystem.RecastNavMesh]
 bDrawPolyEdges=False
@@ -69,5 +70,4 @@ TargetedHardwareClass=Desktop
 AppliedTargetedHardwareClass=Desktop
 DefaultGraphicsPerformance=Maximum
 AppliedDefaultGraphicsPerformance=Maximum
-
 
